fixed flicker bug, added show reviews feature, and styles

--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -99,3 +99,33 @@
 .user {
   margin-bottom: 1.5%;
 }
+
+.reviews {
+	margin-top: 40px;
+	width: 100%;
+}
+
+.review_item {
+	margin-bottom: 10px;
+}
+
+.review_text {
+	margin: 0px;
+}
+
+
+.places .article_subtitle {
+	font-size: 16px;
+	text-align: left;
+	width: 100%;
+	border-bottom: 1px solid #DDDDDD;
+	padding: 0px;
+	margin: 0px;
+	padding-bottom: 10px;
+}
+.places .review-show {
+    font-size: 14px;
+    text-decoration: underline;
+    cursor: pointer;
+    font-weight: 400;
+}
